to-fix: cookie problem, vars undefined in service form

--- a/user/package.json
+++ b/user/package.json
@@ -1,6 +1,7 @@
 {
   "name": "user",
   "version": "0.1.0",
+  "proxy": "http://localhost:8000",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.0.2",
@@ -10,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
+    "axios": "^0.27.2",
     "framer-motion": "^6.3.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
